--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"i": "^0.3.7",
 		"install": "^0.13.0",
 		"npm": "^8.6.0",
+		"papaparse": "^5.3.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-icons": "^4.3.1",
